--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="form-container">
-    <form action="/test" method="post">
+    <form action="/login" method="post">
       <h1>GoKULACPandA＋</h1>
       <p><input type="text" name="username" placeholder="ESC-IDを入力"></p>
       <p><input type="password" name="password" placeholder="パスワードを入力"></p>
